changed the prompt to handle accumulated transcript

--- a/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
+++ b/Projects/01. Podcast Summary App/google_speech_to_text_test.ipynb
@@ -249,8 +249,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:13.685754Z",
-     "start_time": "2024-08-16T08:57:13.008506Z"
+     "end_time": "2024-08-17T03:46:59.305288Z",
+     "start_time": "2024-08-17T03:46:57.830908Z"
     }
    },
    "cell_type": "code",
@@ -321,8 +321,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:13.732855Z",
-     "start_time": "2024-08-16T08:57:13.688756Z"
+     "end_time": "2024-08-17T03:46:59.366895Z",
+     "start_time": "2024-08-17T03:46:59.308294Z"
     }
    },
    "cell_type": "code",
@@ -544,8 +544,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:14.179585Z",
-     "start_time": "2024-08-16T08:57:14.169347Z"
+     "end_time": "2024-08-17T03:46:59.539191Z",
+     "start_time": "2024-08-17T03:46:59.527657Z"
     }
    },
    "cell_type": "code",
@@ -565,8 +565,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:14.923170Z",
-     "start_time": "2024-08-16T08:57:14.903342Z"
+     "end_time": "2024-08-17T03:47:00.819747Z",
+     "start_time": "2024-08-17T03:47:00.786749Z"
     }
    },
    "cell_type": "code",
@@ -592,8 +592,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:15.650483Z",
-     "start_time": "2024-08-16T08:57:15.593570Z"
+     "end_time": "2024-08-17T03:47:01.676889Z",
+     "start_time": "2024-08-17T03:47:01.638797Z"
     }
    },
    "cell_type": "code",
@@ -783,8 +783,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:57:17.015808Z",
-     "start_time": "2024-08-16T08:57:16.987599Z"
+     "end_time": "2024-08-17T03:47:02.877713Z",
+     "start_time": "2024-08-17T03:47:02.834390Z"
     }
    },
    "cell_type": "code",
@@ -1052,8 +1052,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T09:58:45.548481Z",
-     "start_time": "2024-08-16T09:58:45.496390Z"
+     "end_time": "2024-08-17T03:47:05.070272Z",
+     "start_time": "2024-08-17T03:47:05.019318Z"
     }
    },
    "cell_type": "code",
@@ -1364,18 +1364,18 @@
        "  {'word': 'super', 'index_in_transcript': 25}]]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 53
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T09:58:46.433182Z",
-     "start_time": "2024-08-16T09:58:46.422664Z"
+     "end_time": "2024-08-17T03:47:06.571829Z",
+     "start_time": "2024-08-17T03:47:06.560278Z"
     }
    },
    "cell_type": "code",
@@ -1449,18 +1449,18 @@
        "  'transcript': 'like walking around in the super computer center is like walking around inside the brain Yeah, well. one day build a super intelligent So super super intelligence system.'}]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 54
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:30:12.847259Z",
-     "start_time": "2024-08-16T08:30:12.835405Z"
+     "end_time": "2024-08-17T03:47:07.813169Z",
+     "start_time": "2024-08-17T03:47:07.801611Z"
     }
    },
    "cell_type": "code",
@@ -1474,13 +1474,13 @@
    ],
    "id": "b9e074ba5f602ed",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:18:39.167897Z",
-     "start_time": "2024-08-16T08:18:39.141682Z"
+     "end_time": "2024-08-17T03:47:10.908158Z",
+     "start_time": "2024-08-17T03:47:10.879218Z"
     }
    },
    "cell_type": "code",
@@ -1495,13 +1495,13 @@
    ],
    "id": "62d8f19d15eb2451",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:18:43.826189Z",
-     "start_time": "2024-08-16T08:18:40.475869Z"
+     "end_time": "2024-08-17T03:47:16.152631Z",
+     "start_time": "2024-08-17T03:47:12.124408Z"
     }
    },
    "cell_type": "code",
@@ -1513,13 +1513,21 @@
    ],
    "id": "45563d5cc48d0180",
    "outputs": [],
-   "execution_count": 9
+   "execution_count": 11
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "ab2d4b3d8d03893d"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:21:20.666783Z",
-     "start_time": "2024-08-16T08:21:20.644113Z"
+     "end_time": "2024-08-17T03:53:43.643044Z",
+     "start_time": "2024-08-17T03:53:43.618482Z"
     }
    },
    "cell_type": "code",
@@ -1538,16 +1546,22 @@
     "3. People in the podcast: \"{podcast_people}\" \\\n",
     "\n",
     "You have been provided with these: \\\n",
-    "{{less_confident_words}} - less_confident_words (a list of json objects) \\\n",
-    "{{transcript}} - transcript (a string) \\\n",
+    "{{less_confident_words}} - less_confident_words_list (a list of lists of json objects). \\\n",
+    "                           Each json object has two keys: word (the less confident word) and index_in_transcript (the index of the word in the transcript. index of the first word in the transcript is 0). \\\n",
+    "                           Some internal lists can be empty. \\\n",
+    "                           Thant means Google Speech-to-Text has not provided less confident words for the corresponding transcript. \\\n",
+    "{{transcript}} - transcript_list (a list of json objects) \\\n",
+    "                 Each json object has two keys: speaker_tag (the speaker identification number) and transcript (the piece of dialog the speaker said.) \\\n",
     "\n",
-    "In less_confident_words json string, you have been provided less confident words with their index in the transcript. \\\n",
-    "(index of the first word in the transcript is 0) \\\n",
+    "i th item in less_confident_words_list corresponds to i th item in transcript_list. \\\n",
     "\n",
     "These are the tasks you need to perform: \\\n",
-    "1. You have to have a look at less_confident_words and figure out those words has to be changed or not. \\\n",
-    "2. If you think the word has to be changed, you have to change it to a more suitable word. \\\n",
-    "3. You have to review the transcript and make the conversation sound more natural. \\\n",
+    "1. Go through the transcript and less_confident_words_list. \\\n",
+    "2. You have to have a look at less_confident_words and figure out those words has to be changed or not to fit into the context. \\\n",
+    "3. If you think the word has to be changed, you have to change it to a more suitable word. \\\n",
+    "4. You have to review the transcript and make the conversation sound more natural. \\\n",
+    "5. You have to make sure that the conversation is coherent and the words are in the right context. \\\n",
+    "6. You have to make sure that each sentence of the conversation makes sense. \\\n",
     "\"\"\"\n",
     "\n",
     "handle_less_confident_words_prompt = ChatPromptTemplate.from_messages(\n",
@@ -1561,31 +1575,31 @@
    ],
    "id": "49d8fe3b19375a8",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 15
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:30:20.031387Z",
-     "start_time": "2024-08-16T08:30:17.707511Z"
+     "end_time": "2024-08-17T03:53:51.846457Z",
+     "start_time": "2024-08-17T03:53:45.325720Z"
     }
    },
    "cell_type": "code",
    "source": [
     "result = chain.invoke({\n",
-    "    \"less_confident_words\": less_confident_words,\n",
-    "    \"transcript\": transcript\n",
+    "    \"less_confident_words\": less_confident_words_list,\n",
+    "    \"transcript\": transcript_list\n",
     "})"
    ],
    "id": "4b120d5e33691032",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 16
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-08-16T08:30:21.046817Z",
-     "start_time": "2024-08-16T08:30:21.029783Z"
+     "end_time": "2024-08-17T03:53:51.877111Z",
+     "start_time": "2024-08-17T03:53:51.855030Z"
     }
    },
    "cell_type": "code",
@@ -1596,29 +1610,73 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Based on the provided transcript and less_confident_words, I'll review and suggest changes to make the conversation sound more natural.\n",
+      "I'll go through the transcript and less_confident_words_list to review and correct the conversation.\n",
       "\n",
-      "The transcript is: \"And nobody how smart person is gave you this little dumb just under three.\"\n",
+      "Here is the corrected transcript:\n",
       "\n",
-      "The less_confident_words are: [{'word': 'And', 'index_in_transcript': 0}, {'word': 'nobody', 'index_in_transcript': 1}, {'word': 'how', 'index_in_transcript': 2}, {'word': 'smart', 'index_in_transcript': 3}, {'word': 'person', 'index_in_transcript': 4}, {'word': 'is', 'index_in_transcript': 5}, {'word': 'gave', 'index_in_transcript': 6}, {'word': 'you', 'index_in_transcript': 7}, {'word': 'this', 'index_in_transcript': 10}, {'word': 'little', 'index_in_transcript': 11}, {'word': 'dumb', 'index_in_transcript': 12}, {'word': 'just', 'index_in_transcript': 13}, {'word': 'under', 'index_in_transcript': 14}, {'word': 'three.', 'index_in_transcript': 15}]\n",
+      "**Speaker 1:** Can you just speak to what it takes for a great engineering team for you? What I saw in Memphis, the supercomputer cluster is just this intense drive towards simplifying the process of constantly improving it, constantly iterating it.\n",
       "\n",
-      "After reviewing the transcript and less_confident_words, I suggest the following changes:\n",
+      "**Speaker 2:** Well, these are to say simplify as vertical to do it. You know how this very basic first principles algorithm that I run kind of as a mantra, which is the first question: the requirements make the requirements. The requirements always get reduced to some degree. So if you want to reduce complexity by reducing the number of requirements. And nobody, no matter how smart a person is, gave you those requirements - this little dumb just under three. If you have to start there because otherwise, you could get the perfect answer to the wrong question. Though, so try to make the question the least wrong possible. That's what question that requirements means, and then the second thing is try to delete whatever these step is, the part or the process step sounds very obvious, but people often forget to do - to try to delete it entirely, and if you're not forced to put back at least 10% of what you delete, you're not deleting enough, like it's an and it's a some illogically people often. Most the time feel as though they have succeeded if they have not been forced to put their put things back in, but actually, they haven't because they've been overly conservative and have left things in there. That shouldn't be so, and only the third thing is try to optimize it or simplify it. And it sounds just these all sound, I think, very very obvious when I say them, but the number of times I've made these mistakes is more than I care to remember. That's why I have a sponsor.\n",
       "\n",
-      "* \"nobody\" could be changed to \"no matter who\" to make the sentence more coherent.\n",
-      "* \"how smart person is\" could be changed to \"how smart you are\" to make the sentence more conversational.\n",
-      "* \"gave you\" could be changed to \"told you\" to make the sentence more natural.\n",
-      "* \"this little dumb\" could be changed to \"these simple\" to make the sentence more idiomatic.\n",
-      "* \"just under three\" could be changed to \"less than three\" to make the sentence more grammatically correct.\n",
+      "**Speaker 1:** Right. So you like did you say you run through the algorithm? Yeah, basically shoot show up to a problem, show up to the supercomputer cluster, and see the process and ask, can this be deleted?\n",
       "\n",
-      "Here's the revised transcript:\n",
+      "**Speaker 2:** Try to delete it. Yeah. Yeah. Yeah, that's not easy to do, know, and actually, this... What generally makes people uneasy is that you've got to delete at least things that you delete, you will put back in. Yeah,\n",
       "\n",
-      "\"I think no matter who you are, it's like, how smart you are, it's told you these simple requirements, and you're just like, 'less than three.'\"\n",
+      "**Speaker 1:** But...\n",
       "\n",
-      "This revised transcript sounds more natural and conversational, and the changes made are based on the context of the conversation and the topic of Elon Musk's approach to problem-solving.\n"
+      "**Speaker 2:** ...going back to sort of where Olympic systems can steer us wrong is that we tend to remember with it. Sometimes a jarring level of pain where we where we deleted something that we subsequently needed. And so people will remember that one time they've got to put in this thing three years ago, and that caused them trouble. And so they overcorrect and then they put too much stuff in their overcomplicated things. So he actually have to say in a word, deliberately gonna delete more than we should, so that we're putting at least one in 10 things. We're going to add back in.\n",
+      "\n",
+      "**Speaker 1:** And I've seen you suggest just that, that something should be deleted, and you can kind of see the pain. Oh, yeah, absolutely. Everybody feels a little bit of the pain.\n",
+      "\n",
+      "**Speaker 2:** Absolutely, and I told me in advance, like yeah, there's some of the things that we delete, we're going to put back in. People get a little shocked by that, but it makes sense because if you if you're so conservative as to never have to put anything back in, you obviously have a lot of stuff that isn't needed. So you got overcorrect? This is I would say like a cortical override to Olympic instinct.\n",
+      "\n",
+      "**Speaker 1:** One of many that probably leads us astray. Yeah. Yeah. There's like a...\n",
+      "\n",
+      "**Speaker 2:** ...step for as well, which is any given thing can be sped up. I have a fast you think it can be done, like whatever the speed the speed is being done. It can be done faster. But but you shouldn't speak things up until it's soft and until you try to delete it and optimize. Otherwise, you're speeding up something that shouldn't exist as if so, and then the first thing is to automate it. And I've gone backwards so many times where I've automated something, sped it up, simplified it, and then deleted it. And I got tired of doing that. Why I've got this Mantra that is a very effective...\n",
+      "\n",
+      "**Speaker 1:** Five-step process of works. Great. Well, when you were already automated, deleting must be real painful. Yeah, if yeah, that's great. It's...\n",
+      "\n",
+      "**Speaker 2:** ...like it's like wow, I really wasted a lot of effort there. Yeah.\n",
+      "\n",
+      "**Speaker 1:** Done with the with the cluster in Memphis is incredible just in a hand well weeks.\n",
+      "\n",
+      "**Speaker 2:** Yeah, it's not working yet. So I want to pop the champagne corks. In fact, I have a call in a few hours with the Memphis team. Because we're having some power fluctuation issues.\n",
+      "\n",
+      "**Speaker 1:** So yes.\n",
+      "\n",
+      "**Speaker 2:** Yeah, it's kind of there's a when you do. Synchronize training when you've all these computers that are training. That where the training is synchronized to I can level. You it's like having an orchestra, and then the orchestra can go loud to silence very quickly, you know it subsequent. And then the electrical system kind of freaks out about that. Like if you suddenly see giant shifts 10 20 megawatts. So several times a second, this is not what electrical systems are expecting to see...\n",
+      "\n",
+      "**Speaker 1:** So that's one of the main things you have to figure out - the cooling, the power, and then on the software as you go up the stack to do. Yeah, the distributed compute all that today's...\n",
+      "\n",
+      "**Speaker 2:** ...problem is dealing with...\n",
+      "\n",
+      "**Speaker 1:** ...with...\n",
+      "\n",
+      "**Speaker 2:** ...power Jitter power Jitter. Yeah...\n",
+      "\n",
+      "**Speaker 1:** ...a nice ring to that. So that's okay, and you stayed up late into the night as you often do...\n",
+      "\n",
+      "**Speaker 2:** ...their last weekend last week. Yeah, there we finally finally got it to go training going at Allina roughly for 4:20 a.m. Last Monday.\n",
+      "\n",
+      "**Speaker 1:** Total coincidence. Yeah, I mean remove the 422. Yeah, is that Universe again with you? Just love it. I mean Yeah, I wonder if you could speak. One of the things that you did when I was there as you went through all the steps of whatever he's doing just get the sense that you yourself understand it, and everybody understands it so they can understand when something is dumb or something. Something is inefficient or that yeah. Can you speak to that?\n",
+      "\n",
+      "**Speaker 2:** Yeah, so I like I try to do whatever the people at the front lines are doing. I tried to do it at least a few times myself, so King Fiber Optic Cables diagnosing a Pulte connection, but that tends to be the limiting factor for launch training clusters is the caveling. So many cables um because for for coherence of training system where you've got RDMA so remote direct memory access the whole thing is like one giant brain. So if you've got any to any connection, so it's the any GPU can talk to any GPU out of 100,000. That was a crazy cable layout. It looks pretty cool. Yeah, it's like...\n",
+      "\n",
+      "**Speaker 1:** ...it's like the human brain but like at a scale that humans can visibly see it is. Yeah, right.\n",
+      "\n",
+      "**Speaker 2:** I mean here in brain also has a massive amount of the brain tissue is the cables.\n",
+      "\n",
+      "**Speaker 1:** Yeah. So...\n",
+      "\n",
+      "**Speaker 2:** ...look at the gray matter, which is the computer and then the white matter which is cables big percentage of your brain is just cables that's...\n",
+      "\n",
+      "**Speaker 1:** ...like walking around in the supercomputer center is like walking around inside the brain. Yeah, well. One day build a super intelligent So super super intelligence system.\n",
+      "\n",
+      "Let me know if you need any further corrections or reviews!\n"
      ]
     }
    ],
-   "execution_count": 19
+   "execution_count": 17
   },
   {
    "metadata": {},
